kubernetes/k8s-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: eadskill
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: AWS_ACCOUNT_ID.dkr.ecr.AWS_REGION.amazonaws.com/IMAGE_BACKEND:IMAGE_TAG
          ports:
            - containerPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: populate
  namespace: eadskill
spec:
  replicas: 1
  selector:
    matchLabels:
      app: populate
  template:
    metadata:
      labels:
        app: populate
    spec:
      containers:
        - name: populate
          image: AWS_ACCOUNT_ID.dkr.ecr.AWS_REGION.amazonaws.com/IMAGE_POPULATE:IMAGE_TAG
          command: ["python", "populate.py"]
